--- a/robocze/robocze.ipynb
+++ b/robocze/robocze.ipynb
@@ -562,7 +562,17 @@
    "id": "93d87c74-13fc-4e36-9078-cdc5423b8e99",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.express as px\n",
+    "import numpy as np \n",
+    "    \n",
+    "y = plan_2023['gen wiatr']\n",
+    "x = plan_2023['nadwyżki OSP']\n",
+    "\n",
+    "    \n",
+    "plot = px.scatter(y, x)\n",
+    "plot.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -571,6 +581,138 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18914d4e-b37c-488d-a4a4-7496e299ddfa",
+   "metadata": {},
+   "source": [
+    "##  Rezerwa - na razie pomijamy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c088bc57-486a-446b-9abb-5bd24b1736dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (10,5))\n",
+    "\n",
+    "dayList  = plan_2023['Doba']\n",
+    "values_rezerwa = plan_2023['nadwyżki OSP']\n",
+    "\n",
+    "plt.plot(dayList, values_rezerwa )\n",
+    "plt.ylabel('MW')\n",
+    "plt.ylim(0)\n",
+    "plt.title('nadwyżki mocy')\n",
+    "\n",
+    "\n",
+    "# tu zmienić, aby po prawej stronie był procent \n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6f4e72ef-bc6f-431a-a5ac-ffb4e3a792a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21692\\2386099818.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Wykres zapotrzebowania\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mfig3a\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfigsize\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mdayList\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0msrednie_godz\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Godzina'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mgodziny\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m25\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Wykres zapotrzebowania \n",
+    "\n",
+    "fig3a, axs = plt.subplots(1, 2, figsize = (20,6))\n",
+    "dayList  = srednie_godz['Godzina']\n",
+    "godziny = range(1,25) \n",
+    "\n",
+    "values1 = srednie_godz_lato['zap']\n",
+    "axs[0].plot(dayList, values1)\n",
+    "axs[0].set_title('Zapotrzebowanie na moc w sezonie letnim')\n",
+    "\n",
+    "axs[0].set_ylim(15000, 22000)\n",
+    "\n",
+    "axs[0].set_ylabel('MW')\n",
+    "axs[0].set_xlabel('Doba, h')\n",
+    "axs[0].grid(True, linestyle='--')\n",
+    "axs[0].set_xticks(godziny)\n",
+    "\n",
+    "\n",
+    "\n",
+    "values2 = srednie_godz_zima['zap']\n",
+    "axs[1].plot(dayList, values2)\n",
+    "axs[1].set_title('Zapotrzebowanie na moc w sezonie zimowym')\n",
+    "\n",
+    "axs[1].set_ylim(15000, 22000)\n",
+    "\n",
+    "axs[1].set_ylabel('MW')\n",
+    "axs[1].set_xlabel('Doba, h')\n",
+    "axs[1].grid(True, linestyle='--')\n",
+    "\n",
+    "number_of_runs = range(1,25) \n",
+    "axs[1].set_xticks(godziny)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71a06ed5-30c0-43a7-9bed-10b7abe1c877",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f4de067-55b8-4e67-a44a-438c0aa2b7b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87f9ac2e-0c59-401d-93a7-e2ff59fe6985",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88933ebc-c624-45bd-8add-baedea9afdd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "478b28f9-72b8-4e3f-86bc-b069e83fccbb",
+   "metadata": {},
+   "source": [
+    "Na dostawie powyższego wykresu widzimy wyraźny podział na dwie głowne wielkości poziomów rezerw. Pierwszy waha się od 1200 do 2200 MW, a drugi od 2200 do 4000 MW. Skok wystepuje po 7 marca. \n",
+    "Na dostawie powyższego wykresu widzimy wraźny skok przewidywanych rezerw mocy po 7 marca. \n",
+    "wymagana rezerwa w KSE to 9% planowanego zapotrzebowania, więc aby ocenić z czego winika skok wykonany wykres pocentowy. \n",
+    "Wykres procentowy pokazuje, że plan koorydnacyjny PSE zakłada wymóg rezerwy mocy na poziomie 18%. \n",
+    "Poziom wymaganej nadwyżki mocy jest uzależniony od horyzontu planowania i dla planów opracowywanych w dobie D wynosi:\n",
+    "Dla doby D oraz D+1: 9% planowanego (prognozowanego przez OSP) zapotrzebowania.\n",
+    "Od doby D+2 do doby D+9 włącznie: 14% planowanego zapotrzebowania.\n",
+    "Dla pozostałych dób horyzontu planowania PBM począwszy od doby D+10: 18% planowanego zapotrzebowania."
+   ]
   }
  ],
  "metadata": {
